--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          글쑤요
-description:    "Minimal Jekyll theme for storytellers"
+description:    "글을 쓰는 수요일"
 baseurl:        
 url:            "https://writing-on-wednesday.github.io/"
 
